# simple_cli_cookiecutter

./: cookiecutter.json
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  README.md  pyproject.toml  setup.py  tox.ini
{{cookiecutter.project_slug}}/.github/workflows/: style.yml  testing.yml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  __main__.py
{{cookiecutter.project_slug}}/tests/: test_main.py
